# systech-aidd-test

./: .dockerignore  .env.example  .env.prod  .gitignore  BUGS_AND_IMPROVEMENTS_FINAL.md  BUGS_FIXED.md  CHAT_DB_SAVE_FIX.md  DARK_THEME_IMPROVEMENTS.md  DASHBOARD_FIX_SUMMARY.md  Dockerfile  FINAL_SUMMARY.md  FLOATING_CHAT_BUTTON_FEATURE.md  ITERATION_5_REPORT.md  Makefile  QUICKSTART_API.md  README.md  SP-FE-4-COMPLETED.md  SPRINT-D0-DOCKER-SETUP.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  env.production.template  presentation.md  pyproject.toml
.cursor/commands/: review.mdc
.cursor/plans/: s1-mock-api-dashboard-25be2357.plan.md  sp-fe-2-frontend-framework-73669e1b.plan.md  sp-fe-3-dashboard-implementation-fdea21df.plan.md  sprint-d0-docker-setup-ea27712d.plan.md  sprint-d1-build-cd207574.plan.md  sprint-d2-deployment-9d435b81.plan.md  sprint-s1-database-bc5c0f7f.plan.md
.cursor/rules/: conventions.mdc  qa_conventions.mdc  workflow.mdc  workflow_tdd.mdc
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  59aea0b85086_remove_current_role_from_users.py
api/: README.md  __init__.py  api_main.py  chat_manager.py  dependencies.py  models.py  protocols.py  sql_executor.py
api/collectors/: __init__.py  mock_collector.py  real_collector.py
data/: .gitkeep  bot.db  bot.db-shm  bot.db-wal
devops/: CHECKLIST.md  QUICKSTART.md  README.md  api.Dockerfile  api.dockerignore  bot.Dockerfile  bot.dockerignore  deploy-check.sh  frontend.Dockerfile  frontend.dockerignore
devops/doc/: devops-roadmap.md  env-template.md  github-actions-guide.md  github-packages-public.md  sprint-d0-changes.md  sprint-d0-completed.md  sprint-d1-summary.md
devops/doc/guides/: manual-deploy.md
devops/doc/reports/: README.md  d0-testing-report.md  d0-testing-summary.md  d1-completed.md  d1-summary.md  d1-verification.md  d2-deployment-report.md
docs/: architecture_overview.md  code_review_summary.md  conventions.md  idea.md  roadmap.md  tasklist.md  tasklist_tech_debt.md  vision.md  visual_guide.md  workflow.md
docs/tasklists/: tasklist_tech_debt-sp0.md
frontend/: .dockerignore  .prettierrc  DASHBOARD.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/doc/: front-vision.md  frontend-roadmap.md
frontend/doc/adr/: 001-frontend-tech-stack.md
frontend/doc/references/: 21st-ai-chat.md
frontend/doc/sprints/: sp-fe-2-summary.md  sp-fe-3-summary.md  sp-fe-4-summary.md
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: theme-provider.tsx  theme-toggle.tsx
frontend/src/components/chat/: ai-chat.tsx  floating-chat-button.tsx
frontend/src/components/dashboard/: kpi-card.tsx  period-selector.tsx  timeline-chart.tsx
frontend/src/components/layout/: header.tsx  main-layout.tsx  sidebar.tsx
frontend/src/types/: api.ts  chat.ts  index.ts
llm/: __init__.py  client.py
prompts/: nutritionist.txt  text2sql.txt
src/: __init__.py  bot.py  config.py  conversation.py  dependencies.py  logger.py  main.py  metrics.py  protocols.py  role_manager.py  user.py  validators.py
src/database/: __init__.py  repository.py
src/handlers/: __init__.py  handlers.py
src/middlewares/: __init__.py  dependency_injection.py  rate_limit.py
tests/: __init__.py  test_api.py  test_config.py  test_conversation.py  test_dependencies.py  test_integration.py  test_metrics.py  test_rate_limit.py  test_repository.py  test_role_manager.py  test_user.py
